fixed margin issues on mobile view for main

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -151,6 +151,7 @@ img {
 @media screen and (max-width: 425px) {
   h1 {
     font-size: 4em;
+    margin-top: 3vh;
   }
   h2 {
     font-size: 2em;
